--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="google">Google</string>
     <string name="facebook">Facebook</string>
     <string name="prefs_file">com.example.auth_test.PREFERENCE.FILE_KEY</string>
+    <string name="facebook_app_id">344196403532065</string>
+    <string name="fb_login_protocol_scheme">fb344196403532065</string>
 </resources>
